Ejercicios extra funciones

--- a/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
+++ b/03-Python/04-Functions/02-Practica/Ejercicios funciones_enunciados.ipynb
@@ -23,6 +23,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No podemos ir\n"
+     ]
+    }
+   ],
+   "source": [
+    "def excursion(tiempo, acompañantes):\n",
+    "    if tiempo == True and len(acompañantes) >= 2:\n",
+    "        print(acompañantes[0])\n",
+    "    elif tiempo == True:\n",
+    "        print('A la montaña')\n",
+    "    else:\n",
+    "        print(\"No podemos ir\")\n",
+    "\n",
+    "excursion (False, ['Andres'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33,31 +58,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No es un número valido\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dias_semana(num_dias):\n",
+    "    if num_dias not in range(1,8):\n",
+    "        print(\"No es un número valido\")\n",
+    "    if num_dias == 1:\n",
+    "        print('Lunes')\n",
+    "    elif num_dias == 2:\n",
+    "        print('Martes')\n",
+    "    elif num_dias == 3:\n",
+    "        print('Miercoles')\n",
+    "    elif num_dias == 4:\n",
+    "        print('Jueves')\n",
+    "    elif num_dias == 5:\n",
+    "        print('Viernes')\n",
+    "    elif num_dias == 6:\n",
+    "        print('Sabado')\n",
+    "    elif num_dias == 7:\n",
+    "        print('Domingo')\n",
+    "\n",
+    "dias_semana(8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +123,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 < 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compara (x,y):\n",
+    "    if x == y:\n",
+    "        print('Iguales')\n",
+    "    elif x > y:\n",
+    "        print(x, '>', y)\n",
+    "    else:    \n",
+    "        print(x, '<', y)\n",
+    "\n",
+    "compara (2,3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -127,17 +177,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto = 'Ya ha salido el Tomb Raider remastered'\n",
+    "\n",
+    "def contador(texto:str, letra):\n",
+    "    rep = texto.count(letra)\n",
+    "    return rep\n",
+    "\n",
+    "contador(texto,'a')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,33 +211,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'H', 1: 'e', 2: 'l', 3: 'e', 4: 'n', 5: 'a'}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "def diccionario (cadena):\n",
+    "    letras = dict(enumerate(cadena))\n",
+    "    print(letras)\n",
+    "\n",
+    "diccionario(\"Helena\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -190,10 +244,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m lista_sum1\n\u001b[0;32m     11\u001b[0m lista_sum \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLunes\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m19\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFebrero\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m---> 12\u001b[0m \u001b[43msumacero\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlista_sum\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2024\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# depende de si quiero conservar la misma lista\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[15], line 8\u001b[0m, in \u001b[0;36msumacero\u001b[1;34m(lista_sum, add, remove, elemento)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m remove \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m      7\u001b[0m     lista_sum1 \u001b[38;5;241m=\u001b[39m lista_sum\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mlista_sum1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[43melemento\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lista_sum1\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "def sumacero (lista_sum,add,remove,elemento):\n",
+    "    if add == True:\n",
+    "        lista_sum1 = lista_sum.copy()\n",
+    "        lista_sum1.append(elemento)\n",
+    "        return lista_sum1\n",
+    "    elif remove == True:\n",
+    "        lista_sum1 = lista_sum.copy()\n",
+    "        lista_sum1.remove(elemento)\n",
+    "        return lista_sum1\n",
+    "\n",
+    "lista_sum = ['Lunes',19,'Febrero']\n",
+    "sumacero(lista_sum,False,True,2024)\n",
+    "# depende de si quiero conservar la misma lista"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,17 +300,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Superare el ramp-up\n"
+     ]
+    }
+   ],
+   "source": [
+    "_1 = 'Superare' \n",
+    "_2 = 'el'\n",
+    "_3 = 'ramp-up'\n",
+    "\n",
+    "def cervantes(word,word1,word2):\n",
+    "    texto = print(word,word1,word2)    \n",
+    "\n",
+    "cervantes(_1,_2,_3)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,10 +340,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m         fibo\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlen\u001b[39m(fibo)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mlen\u001b[39m(fibo)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m fibo[n]\n\u001b[1;32m----> 9\u001b[0m \u001b[43mn_fibo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[23], line 7\u001b[0m, in \u001b[0;36mn_fibo\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      5\u001b[0m fibo \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      6\u001b[0m fibo\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mlen\u001b[39m(fibo)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mlen\u001b[39m(fibo)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfibo\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def n_fibo(n):\n",
+    "    if n == 1:\n",
+    "        return n\n",
+    "    elif     \n",
+    "        fibo = [0,1]\n",
+    "        fibo.append(len(fibo)-1 + len(fibo)-2)\n",
+    "        return fibo[n]\n",
+    "\n",
+    "n_fibo(8)"
+   ]
   },
   {
    "cell_type": "code",
@@ -277,38 +392,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cuadrado (lados:list):\n",
+    "    for l in lados:\n",
+    "       sup = l**2\n",
+    "       return sup"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def triangulo (bases:list,alturas:list):\n",
+    "    for b in bases: \n",
+    "        sup = (b*h)/2\n",
+    "    return sup"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def circulo (radios:list):\n",
+    "    from math import pi\n",
+    "    for r in radios:\n",
+    "        sup = pi*(r**2)\n",
+    "        return sup"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "638.8185307179587"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cuadrados = 0\n",
+    "num_triangulos = 1 \n",
+    "num_circulos = 2\n",
+    "b = 3\n",
+    "h = 7\n",
+    "r = 10\n",
+    "l = 0\n",
+    "def area_total (num_cuadrados, num_triangulos,num_circulos):\n",
+    "    area = (num_cuadrados*cuadrado(l)) + (num_triangulos*triangulo(b,h)) + (num_circulos*circulo(r))\n",
+    "    return area\n",
+    "area_total(num_cuadrados, num_triangulos,num_circulos)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "396.46015351590177"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_cuadrados = 1\n",
+    "num_triangulos = 5\n",
+    "num_circulos_R = 2\n",
+    "num_circulos_r = 1\n",
+    "b = 2\n",
+    "h = 4\n",
+    "r = 4\n",
+    "R = 6\n",
+    "l = 10\n",
+    "\n",
+    "def area_total_1 (num_cuadrados, num_triangulos,num_circulos_r, num_circulos_R):\n",
+    "    area = (num_cuadrados*cuadrado(l)) + (num_triangulos*triangulo(b,h)) + (num_circulos_r*circulo(r)) + (num_circulos_R*circulo(R))\n",
+    "    return area\n",
+    "\n",
+    "area_total_1(num_cuadrados, num_triangulos,num_circulos_r, num_circulos_R)\n"
+   ]
   }
  ],
  "metadata": {
@@ -327,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
